[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "PyWeatherKit"
authors = [{name = "David Kopec", email = "david@oaksnow.com"}]
version = "0.0.2"
description = "A Python wrapper for the WeatherKit API"
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["weather", "kit", "weatherkit", "api"]
dependencies = [
    "requests >=2.6",
    "pyjwt[crypto] >=2.4.0",
]

[project.urls]
Home = "https://github.com/davecom/PyWeatherKit"

[tool.flit.module]
name = "weatherkit"